[gd_scene load_steps=5 format=3 uid="uid://cauv6vdrywn5w"]

[ext_resource type="Texture2D" uid="uid://ci2pw6gh0xpjn" path="res://img/unnamed-4.png" id="1_1y6vs"]
[ext_resource type="Script" uid="uid://rnmk0w2do7ct" path="res://scripts/menu_members.gd" id="1_4gq5v"]
[ext_resource type="FontFile" uid="uid://c4bdr2egxlgtk" path="res://resources/fonts/Rhythm of the Blast.ttf" id="2_4gq5v"]
[ext_resource type="Texture2D" uid="uid://bd7ytcynkoy55" path="res://img/unnamed.png" id="3_4p6kh"]

[node name="MenuMembers" type="Node2D"]
script = ExtResource("1_4gq5v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUpgrades" type="PanelContainer" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 122.0
offset_right = 1694.0
offset_bottom = 1046.0
scale = Vector2(0.995755, 0.913314)
metadata/_edit_use_anchors_ = true

[node name="MarginUpgrades" type="MarginContainer" parent="CanvasLayer/MenuUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridUpgrades" type="GridContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades"]
layout_mode = 2
columns = 2

[node name="MarginImg1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg1"]
layout_mode = 2
texture = ExtResource("1_1y6vs")
expand_mode = 3
stretch_mode = 5

[node name="MarginImg2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg2"]
layout_mode = 2
texture = ExtResource("3_4p6kh")
stretch_mode = 5

[node name="MaginText1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4gq5v")
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaginText2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4gq5v")
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginButton1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button1" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[node name="MarginButton2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button2" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2/Button2" to="." method="_on_button_2_pressed"]
